Set the replyReceived flag only if the current command is exec-run.

Fixes various MI errors in remote debugging scenarios.

BUG: 346827