debuggers/gdb/gdb.cpp
@@ -255,7 +255,8 @@ void GDB::processLine(const QByteArray& line)
                emit internalCommandOutput(QString::fromUtf8(line) + '\n');
 
                if (result.reason == "thread-group-started") {
-                   receivedReply_ = true;
+                   if (currentCmd_->cmdToSend().contains("exec-run"))
+                       receivedReply_ = true;
                    //     (gdb) -exec-run
                    //     =thread-group-started,id="i1",pid="16768"
                    if (line.contains("pid=\"")) {
